# BeerPongTournament

./: .gitignore  README.md
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml  deploy.yml  destroy.yml
backend/: .env_example  Dockerfile  README.md  justfile  pyproject.toml  teams.csv
backend/src/beerpong_api/: __init__.py  main.py  settings.py
backend/src/beerpong_api/api/: routes.py
backend/src/beerpong_api/dal/: __init__.py  _normalize.py  heap.py  heat.py  leaderboard.py  matches.py  players.py  teams.py
backend/src/beerpong_api/db/: __init__.py  client.py  models.py  sqlite_container.py
backend/tests/: conftest.py  test_health.py  test_heap.py  test_heat.py  test_leaderboard.py  test_matches.py  test_players.py  test_teams.py
data/: team.csv  tmp_team.csv
frontend/: app.js  config.js  demo-data.js  index.html  justfile  styles.css
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/env/: dev.tfvars
